syntax = "proto3";

package webhooks.v1;
option go_package = "svix-poc/app/webhook/grpc/v1;webhooksv1";

service WebHookService {
    rpc CreateApps(CreateAppsRequest) returns (CreateAppsResponse);
}

message CreateAppsRequest {

}

message CreateAppsResponse {
    
}